--- a/lauenroth.css
+++ b/lauenroth.css
@@ -915,7 +915,7 @@ dt, dd {
   width: 85px;
   padding: 7px 0 0;
   margin: 0 auto;
-  border-radius: 100%;
+  border-radius: 85px;
   position: relative;
   transition: .3s;
 }
