--- a/sass/lauenroth.scss
+++ b/sass/lauenroth.scss
@@ -440,7 +440,7 @@ section.page > div {
   }
 }
 #me {
-  background: url(images/joerg.png) no-repeat bottom;
+  background: url(/images/joerg.png) no-repeat bottom;
   width: 300px;
   height: 281px;
   position: absolute;
